# magenta

./: .env.example  .env.local.example  .gitignore  BUILD_APPROACH.md  CLAUDE.md  Dockerfile  Dockerfile.services  FIREWALL_SETUP.md  GITHUB_SETUP.md  HEAP_BOUNDARY_MYSTERY.md  MCP_MEMORY_RECOVERY_SPEC.md  MCP_NETWORKING_NOTES.md  MCP_SERVER_SETUP.md  README.md  SECURITY_TODO.md  VAULT_SETUP.md  WAKEUP.md  container-startup.sh  docker-compose.local-override.yml  docker-compose.services.yml  era0_backup.json  link_orphaned_by_splitting.py  magenta.sh  packages.txt  pyproject.toml  requirements.txt
ansible/: inventory.yml  playbook.yml
conversations/: admin.py  models.py  urls.py  views.py
conversations/mcp/: server.py  tools.py
conversations/migrations/: 0001_initial.py  0002_add_conversation_participant.py  0002_add_preceding_message_to_compactingaction.py  0002_note_eth_blockheight.py  (+9 more)
deployment/: Dockerfile  README.md  container-startup.sh  deploy-to-hunter.sh  docker-compose.local.yml  docker-compose.services.yml  packages.txt
hunter/: Dockerfile  Dockerfile.dev  README.md  container_startup.py  deploy-to-hunter.sh  docker-compose-build.yml  docker-compose.local.yml  multi-log-viewer.sh  packages.txt
importers_and_parsers/: claude_code_v2.py
memory_viewer/: settings.py
notes/: DNS_SETUP.md  LOCAL_DEV_SETUP.md  REAWAKEN_MAGENT.md  SECURITY_TODO.md  SSH_ROUTING.md  branch-strategy.md
notes-to-self/: MAGENT_ENVIRONMENT.md  MCP_NETWORKING_NOTES.md
scripts/: build-local-env.sh
security/: secrets_filter.py
watcher/: conversation_watcher.py
(+37 files in other folders)
