[project]
name = "magenta"
version = "0.1.0"
description = "Memory and conversation management system for Claude"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.7",
    "psycopg2-binary==2.9.10",
    "watchdog==6.0.0",
    "constant-sorrow==0.1.0a9",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.0",
    "mcp>=1.0.0",
    "debugpy>=1.8.0",
    "pyyaml>=6.0.0",  # For secrets_filter vault parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "memory_viewer.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
testpaths = ["security", "watcher", "conversations", "importers_and_parsers"]
